adjust search icon alignment for quicksearch, fixes #9108

--- a/resources/assets/stylesheets/less/quicksearch.less
+++ b/resources/assets/stylesheets/less/quicksearch.less
@@ -15,13 +15,15 @@ input.quicksearchbox {
 }
 
 div.quicksearch_frame {
+    text-indent: 0;
+
     input[type="text"] {
         box-sizing: border-box;
         border-width: 1px 30px 1px 1px;
         border-style: solid;
-        border-color: #7E92B0;
+        border-color: @base-color-60;
         border-image: none;
-        float: left;
+        display: inline-block !important;
     }
 
     input[type=submit] {
@@ -33,10 +35,11 @@ div.quicksearch_frame {
         width: 29px;
         height: 24px;
         .background-icon('search', 'info_alt');
-        background-position: center 8px;
+        background-position: center;
         background-repeat: no-repeat;
-        vertical-align: top;
-        margin-left: -30px;
+        vertical-align: middle;
+        margin-left: -32px;
+        margin-top: 1px;
     }
 }
 
